k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: educationelly
  labels:
    app: educationelly-graphql
    environment: production
